fix: very long words in book title didnt wrap, fixed with word-wrap:break-word

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -346,6 +346,7 @@ span.decorative {
     font-size: 1.2rem;
     font-weight: 700;
     margin-top: 10px;
+    word-wrap: break-word;
 }
 
 /* Author styling */
@@ -353,6 +354,7 @@ span.decorative {
     font-size: 1rem;
     font-style: italic;
     margin-top: 0.5rem;
+    word-wrap: break-word;
 }
 
 .genre-badge {
